--- a/CheckMates/NewReceipt.storyboard
+++ b/CheckMates/NewReceipt.storyboard
@@ -251,10 +251,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="n1v-vb-mKt" kind="show" identifier="ShowEvent" id="jYn-Xg-BYf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EyQ-6y-Sq2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1494" y="-447"/>
+        </scene>
+        <!--Event Table View Controller-->
+        <scene sceneID="fcJ-7M-bA1">
+            <objects>
+                <viewController id="n1v-vb-mKt" customClass="EventTableViewController" customModule="CheckMates" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Dq3-PU-kEX"/>
+                        <viewControllerLayoutGuide type="bottom" id="egi-98-WKY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dLw-J9-2Y6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zPk-3Z-TvP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2511" y="-444"/>
         </scene>
         <!--Choose Method-->
         <scene sceneID="mms-Ur-YKf">
